temp fix for article images covering text on smaller screens
images now on top instead of to the side (i don't like it)

--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@
   background-color: rgb(126, 144, 187);
 }
 
-.big-article > h3,
-.big-article > p {
-  display: inline;
+.big-text,
+.big-title {
+  display: inline-block;
 }
 
 .big-frame {
@@ -107,8 +107,10 @@
 }
 
 .new-img {
-  max-height: 100%;
-  width: auto;
+  width: 100%;
+  max-width: 100%;
+
+  height: auto;
   position: relative;
   top: 10%;
   border-radius: 10px;
